Fix layout issue

--- a/PhotoStory/Content/layout.less
+++ b/PhotoStory/Content/layout.less
@@ -15,6 +15,10 @@ header {
     }
 }
 
+.navbar-photo-story {
+    margin-bottom: 0px;
+}
+
 .navbar-register,
 .navbar-brand {
     @elementHeight: 20px;
